{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 42,
  "lineage": "c2993939-01f4-f31e-1284-744e7c57ec5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a731ca78566d43",
            "association_id": "eipassoc-0854a54b850ab67f8",
            "domain": "vpc",
            "id": "eipalloc-016a731ca78566d43",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f8a7cfbd5b1cd7c1",
            "private_dns": "ip-10-0-1-62.ec2.internal",
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-52-23-150-183.compute-1.amazonaws.com",
            "public_ip": "52.23.150.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_1"
            },
            "tags_all": {
              "Name": "nat_ip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036f729f8d97e7340",
            "association_id": "eipassoc-0c3200461f74508bc",
            "domain": "vpc",
            "id": "eipalloc-036f729f8d97e7340",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07b3bae8650343b7c",
            "private_dns": "ip-10-0-2-113.ec2.internal",
            "private_ip": "10.0.2.113",
            "public_dns": "ec2-13-216-187-5.compute-1.amazonaws.com",
            "public_ip": "13.216.187.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_2"
            },
            "tags_all": {
              "Name": "nat_ip_2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:internet-gateway/igw-0a4f0797ee158c9e3",
            "id": "igw-0a4f0797ee158c9e3",
            "owner_id": "207567773201",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/application-tier-lb/ad07c24b8ad50e67",
            "arn_suffix": "app/application-tier-lb/ad07c24b8ad50e67",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-application-tier-lb-1447280164.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/application-tier-lb/ad07c24b8ad50e67",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-tier-lb",
            "security_groups": [
              "sg-0964e880cd632c170"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0463877a059aaadcc"
              },
              {
                "subnet_id": "subnet-070f88bf6dfe3a6e4"
              }
            ],
            "subnets": [
              "subnet-0463877a059aaadcc",
              "subnet-070f88bf6dfe3a6e4"
            ],
            "vpc_id": "vpc-092a12f5ecda28c2d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/front-end-lb/3c41bfa63a52840e",
            "arn_suffix": "app/front-end-lb/3c41bfa63a52840e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-1752766532.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/front-end-lb/3c41bfa63a52840e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "security_groups": [
              "sg-01646cd60e7e89a11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0447750053b813387"
              },
              {
                "subnet_id": "subnet-0890f53579b8da07e"
              }
            ],
            "subnets": [
              "subnet-0447750053b813387",
              "subnet-0890f53579b8da07e"
            ],
            "vpc_id": "vpc-092a12f5ecda28c2d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:listener/app/application-tier-lb/ad07c24b8ad50e67/9b29e672cb6ee1ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/application-tier-lb-tg/9d3f21ee99519f01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:listener/app/application-tier-lb/ad07c24b8ad50e67/9b29e672cb6ee1ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/application-tier-lb/ad07c24b8ad50e67",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:listener/app/front-end-lb/3c41bfa63a52840e/da20fdb0adbc9a24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/front-end-lb-tg/adfa57c9272d59ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:listener/app/front-end-lb/3c41bfa63a52840e/da20fdb0adbc9a24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:loadbalancer/app/front-end-lb/3c41bfa63a52840e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/application-tier-lb-tg/9d3f21ee99519f01",
            "arn_suffix": "targetgroup/application-tier-lb-tg/9d3f21ee99519f01",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/application-tier-lb-tg/9d3f21ee99519f01",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-tier-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/front-end-lb-tg/adfa57c9272d59ff",
            "arn_suffix": "targetgroup/front-end-lb-tg/adfa57c9272d59ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:207567773201:targetgroup/front-end-lb-tg/adfa57c9272d59ff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-end-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a731ca78566d43",
            "connectivity_type": "public",
            "id": "nat-0ee611e60cf6e4860",
            "network_interface_id": "eni-0f8a7cfbd5b1cd7c1",
            "private_ip": "10.0.1.62",
            "public_ip": "52.23.150.183",
            "subnet_id": "subnet-0890f53579b8da07e",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Name": "nat_gw_1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036f729f8d97e7340",
            "connectivity_type": "public",
            "id": "nat-01605f113c282eaea",
            "network_interface_id": "eni-07b3bae8650343b7c",
            "private_ip": "10.0.2.113",
            "public_ip": "13.216.187.5",
            "subnet_id": "subnet-0447750053b813387",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Name": "nat_gw_2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:route-table/rtb-069a8055ed95a1363",
            "id": "rtb-069a8055ed95a1363",
            "owner_id": "207567773201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee611e60cf6e4860",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:route-table/rtb-058ff8ed766178cf2",
            "id": "rtb-058ff8ed766178cf2",
            "owner_id": "207567773201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01605f113c282eaea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:route-table/rtb-08c75136335ed7b96",
            "id": "rtb-08c75136335ed7b96",
            "owner_id": "207567773201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4f0797ee158c9e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c6eb0d858755349",
            "route_table_id": "rtb-069a8055ed95a1363",
            "subnet_id": "subnet-070f88bf6dfe3a6e4"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002f0d6214123a3d8",
            "route_table_id": "rtb-058ff8ed766178cf2",
            "subnet_id": "subnet-0463877a059aaadcc"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06941e407d083e154",
            "route_table_id": "rtb-08c75136335ed7b96",
            "subnet_id": "subnet-0890f53579b8da07e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012ddd32a241cd3ef",
            "route_table_id": "rtb-08c75136335ed7b96",
            "subnet_id": "subnet-0447750053b813387"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:security-group/sg-0964e880cd632c170",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0964e880cd632c170",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ce12e6e2b19da42"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ce12e6e2b19da42"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_alb_application_tier",
            "name_prefix": "",
            "owner_id": "207567773201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_application_tier_sg"
            },
            "tags_all": {
              "Name": "alb_application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:security-group/sg-01646cd60e7e89a11",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01646cd60e7e89a11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_alb_presentation_tier",
            "name_prefix": "",
            "owner_id": "207567773201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_presentation_tier_sg"
            },
            "tags_all": {
              "Name": "alb_presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:security-group/sg-04b44f658bb918929",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b44f658bb918929",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964e880cd632c170"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964e880cd632c170"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_application_tier",
            "name_prefix": "",
            "owner_id": "207567773201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application_tier_sg"
            },
            "tags_all": {
              "Name": "application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:security-group/sg-08ce12e6e2b19da42",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ce12e6e2b19da42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01646cd60e7e89a11"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01646cd60e7e89a11"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_connection_to_presentation_tier",
            "name_prefix": "",
            "owner_id": "207567773201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "presentation_tier_sg"
            },
            "tags_all": {
              "Name": "presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:subnet/subnet-070f88bf6dfe3a6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070f88bf6dfe3a6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567773201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:subnet/subnet-0463877a059aaadcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0463877a059aaadcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567773201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:subnet/subnet-0890f53579b8da07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0890f53579b8da07e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567773201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:subnet/subnet-0447750053b813387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0447750053b813387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567773201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:vpc/vpc-092a12f5ecda28c2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0152212457f3345e1",
            "default_route_table_id": "rtb-027df324764e802c5",
            "default_security_group_id": "sg-07a8289fa061c2dc9",
            "dhcp_options_id": "dopt-02238b1256b636b80",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092a12f5ecda28c2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027df324764e802c5",
            "owner_id": "207567773201",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567773201:security-group/sg-0ef2d2829c6d61594",
            "description": "Allows application tier to access the RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef2d2829c6d61594",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EC2 to MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b44f658bb918929"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSG",
            "name_prefix": "",
            "owner_id": "207567773201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a12f5ecda28c2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.application_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}